Dolphin Search: Do not use Nepomuk for hidden folders

Nepomuk does not index hidden folders

BUG: 318442
REVIEW: 110697
FIXED-IN: 4.11.0